# SoftwarePatterns

./: Attr.C  Attr.H  Builder_State.C  Builder_State.H  CMakeLists.txt  ChangeManager.C  ChangeManager.H  Command.C  Command.H  CompositeNode.C  CompositeNode.H  DOMAttrAdapter.H  DOMBuilder.C  DOMBuilder.H  DOMDocument.hpp  DOMDocumentAdapter.C  DOMDocumentAdapter.H  DOMElementAdapter.H  DOMNode.hpp  DOMNodeAdapter.C  DOMNodeAdapter.H  DOMTextAdapter.H  Director.C  Director.H  Director_State.C  Director_State.H  Document.C  Document.H  Element.C  Element.H  EventHandler.H  Node.C  Node.H  NodeFlyweight.C  NodeFlyweight.H  NodeIter.C  NodeIter.H  NodeList.H  NodeValidatorDecorator.C  NodeValidatorDecorator.H  (+20 more)
